@@ -2,8 +2,8 @@ package com.uber.nullaway.jspecify;
 
 import com.google.errorprone.CompilationTestHelper;
 import com.uber.nullaway.NullAwayTestsBase;
-import java.util.Arrays;
-import org.junit.Ignore;
+import java.util.List;
+import org.junit.Assume;
 import org.junit.Test;
 
 public class BytecodeGenericsTests extends NullAwayTestsBase {
@@ -76,6 +76,8 @@ public class BytecodeGenericsTests extends NullAwayTestsBase {
 
   @Test
   public void genericsChecksForFieldAssignments() {
+    // to read annotations properly from bytecode
+    Assume.assumeTrue(Runtime.version().feature() >= 21);
     makeHelper()
         .addSourceLines(
             "Test.java",
@@ -99,6 +101,9 @@ public class BytecodeGenericsTests extends NullAwayTestsBase {
 
   @Test
   public void genericsChecksForParamPassingAndReturns() {
+    // to read annotations properly from bytecode
+    Assume.assumeTrue(Runtime.version().feature() >= 21);
+
     makeHelper()
         .addSourceLines(
             "Test.java",
@@ -224,10 +229,9 @@ public class BytecodeGenericsTests extends NullAwayTestsBase {
   }
 
   @Test
-  @Ignore("Failing due to https://bugs.openjdk.org/browse/JDK-8337795")
-  // TODO Re-enable this test once the JDK bug is fixed, on appropriate JDK versions
-  //  See https://github.com/uber/NullAway/issues/1011
   public void callMethodTakingJavaUtilFunction() {
+    // to read annotations properly from bytecode
+    Assume.assumeTrue(Runtime.version().feature() >= 21);
     makeHelper()
         .addSourceLines(
             "Test.java",
@@ -244,7 +248,9 @@ public class BytecodeGenericsTests extends NullAwayTestsBase {
 
   private CompilationTestHelper makeHelper() {
     return makeTestHelperWithArgs(
-        Arrays.asList(
-            "-XepOpt:NullAway:AnnotatedPackages=com.uber", "-XepOpt:NullAway:JSpecifyMode=true"));
+        List.of(
+            "-XepOpt:NullAway:AnnotatedPackages=com.uber",
+            "-XepOpt:NullAway:JSpecifyMode=true",
+            "-XDaddTypeAnnotationsToSymbol=true"));
   }
 }
